# live-bootcamp-project

./: .gitignore  compose.override.yml  compose.yml  docker.sh
.github/workflows/: prod.yml
app-service/: Dockerfile
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: .gitignore  Cargo.toml  Dockerfile  build.rs
auth-service/.sqlx/: query-83fab700d19b2b75c8718ed5b3bf4eb4ca7ae46759d2c00bada72ddbc30f7fa9.json  query-b8cb7de5066857c6bbdb1973099943780649b85e455696c54dd9bb05d62456b3.json
auth-service/assets/: index.html
auth-service/migrations/: 20241102133040_create_users_table.up.sql
auth-service/proto/: validate_token.proto  verify_token_service.proto
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_store.rs  email.rs  email_client.rs  error.rs  login_attempt_id.rs  mod.rs  password.rs  two_fa_code.rs  user.rs
auth-service/src/routes/: delete_account.rs  hello.rs  jwt.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
