[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
reqwest = { version = "^0", default-features = false, features = [
    "json",
    "cookies",
] }

[dependencies]
async-trait = "0.1.83"
axum = "^0"
axum-extra = { version = "^0", features = ["cookie", "typed-header"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
# needed to run on docker properly
openssl = { version = "^0", features = ["vendored"] }
thiserror = "1.0.64"
tokio = { version = "^1", features = ["full"] }
tower-http = { version = "^0", features = ["fs", "cors"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
regex = "1.11.0"
rand = "0.8.5"
uuid = { version = "^1", features = ["v4", "serde"] }
