[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
reqwest = { version = "^0", default-features = false, features = [
    "json",
    "cookies",
] }
rstest = "0.23.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[dependencies]
# Used to hash Password before storing to database.
argon2 = { version = "*", features = [
    "std",
] } # Task state to use exact version "0.5.3" ...? Why?
async-trait = "0.1.83"
axum = "^0"
# used to help extract cookie from the cookie jar
axum-extra = { version = "^0", features = ["cookie", "typed-header"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
# needed to run on docker properly
openssl = { version = "^0", features = ["vendored"] }
rand = "0.8.5"
# used for password validation
regex = "1.11.0"
# used to store banned token
redis = { version = "0.27.5", features = ["tokio-comp"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sqlx = { version = "*", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
] } # Task states to use exact version "0.8"? Why?
thiserror = "1.0.64"
tokio = { version = "^1", features = ["full"] }
tower-http = { version = "^0", features = ["fs", "cors"] }
uuid = { version = "^1", features = ["v4", "serde"] }
# test_helpers = { path = "../test_helpers" }
# I want to rely on the test helpers in the local file, instead of reading into repository... why can't I do this?
# Running into problems with docker compose because it couldn't find test-helpers??
test_helpers = { git = "https://github.com/letsgetrusty/test-helpers.git" }
